--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -37,6 +37,90 @@
     --sidebar-accent-foreground: 0 0% 100%;
     --sidebar-border: 22 17% 55%;
     --sidebar-ring: 20 25% 51%;
+  }
+  .dark {
+    --background: 203 47% 12%;
+    --foreground: 335 44% 92%;
+    --card: 205 33% 16%;
+    --card-foreground: 335 44% 92%;
+    --popover: 205 33% 16%;
+    --popover-foreground: 335 44% 92%;
+    --primary: 44 93% 82%;
+    --primary-foreground: 203 47% 12%;
+    --secondary: 347 52% 77%;
+    --secondary-foreground: 203 47% 12%;
+    --muted: 220 10% 16%;
+    --muted-foreground: 347 52% 77%;
+    --accent: 328 34% 63%;
+    --accent-foreground: 335 44% 92%;
+    --destructive: 326 74% 63%;
+    --destructive-foreground: 203 47% 12%;
+    --border: 207 33% 27%;
+    --input: 204 31% 18%;
+    --ring: 184 41% 52%;
+    --chart-1: 184 41% 52%;
+    --chart-2: 347 52% 77%;
+    --chart-3: 328 34% 63%;
+    --chart-4: 191 70% 26%;
+    --chart-5: 220 10% 16%;
+    --sidebar-background: 204 38% 11%;
+    --sidebar-foreground: 215 14% 95%;
+    --sidebar-primary: 326 83% 62%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 329 84% 82%;
+    --sidebar-accent-foreground: 222 24% 18%;
+    --sidebar-border: 221 18% 26%;
+    --sidebar-ring: 326 83% 62%;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+} */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 0 0% 20%;
+    --card: 210 100% 97%;
+    --card-foreground: 0 0% 13%;
+    --popover: 330 100% 98%;
+    --popover-foreground: 0 0% 20%;
+    --primary: 0 100% 71%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 50 100% 71%;
+    --secondary-foreground: 0 0% 20%;
+    --muted: 240 67% 97%;
+    --muted-foreground: 0 0% 40%;
+    --accent: 122 44% 85%;
+    --accent-foreground: 0 0% 20%;
+    --destructive: 0 100% 62%;
+    --destructive-foreground: 0 0% 100%;
+    --border: 0 0% 87%;
+    --input: 0 0% 97%;
+    --ring: 45 100% 51%;
+    --chart-1: 195 77% 68%;
+    --chart-2: 35 100% 65%;
+    --chart-3: 125 57% 64%;
+    --chart-4: 16 100% 70%;
+    --chart-5: 284 51% 69%;
+    --radius: 0.5rem;
+    --sidebar-background: 210 100% 97%;
+    --sidebar-foreground: 0 0% 13%;
+    --sidebar-primary: 0 100% 71%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 50 100% 71%;
+    --sidebar-accent-foreground: 0 0% 20%;
+    --sidebar-border: 0 0% 80%;
+    --sidebar-ring: 45 100% 51%;
   }
   .dark {
     --background: 203 47% 12%;
